@startuml gof_abstract_factory

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Creational #01 - Abstract Factory

interface AbstractFactory {
    +create_product_a()
    +create_product_b()
}

class ConcreteFactory1 {
    +create_product_a()
    +create_product_b()
}

class ConcreteFactory2 {
    +create_product_a()
    +create_product_b()
}

AbstractFactory <|.. ConcreteFactory1
AbstractFactory <|.. ConcreteFactory2

interface AbstractProductA {
    +operation_a()
}
class ProductA1 {
    +operation_a()
}
class ProductA2 {
    +operation_a()
}
AbstractProductA <|.. ProductA1
AbstractProductA <|.. ProductA2


interface AbstractProductB {
    +operation_b()
}
class ProductB1 {
    +operation_b()
}
class ProductB2 {
    +operation_b()
}
AbstractProductB <|.. ProductB1
AbstractProductB <|.. ProductB2

ConcreteFactory1 --> ProductA1
ConcreteFactory1 --> ProductB1

ConcreteFactory2 --> ProductA2
ConcreteFactory2 --> ProductB2
@enduml
